include(GenerateShibokenBindings)



set(SOURCES
	AddPlaneNode.cpp
	AnimatingObjectI.cpp
	AppInstance.cpp
	AppManager.cpp
	AppManagerPrivate.cpp
	Backdrop.cpp
	BezierCP.cpp
	Bezier.cpp
	Cache.cpp
	CacheEntryBase.cpp
	CacheEntryKeyBase.cpp
	CLArgs.cpp
	ColorParser.cpp
	CoonsRegularization.cpp
	CornerPinOverlayInteract.cpp
	CreateNodeArgs.cpp
	CurrentFrameRequestScheduler.cpp
	Curve.cpp
	DefaultRenderScheduler.cpp
	DiskCacheNode.cpp
	Distortion2D.cpp
	Dot.cpp
	EffectDescription.cpp
	EffectInstanceActionResults.cpp
	EffectInstanceActions.cpp
	EffectInstanceChannelSelectors.cpp
	EffectInstance.cpp
	EffectInstanceDefaultKnobs.cpp
	EffectInstancePrivate.cpp
	EffectInstanceRenderRoI.cpp
	EffectInstanceTLSData.cpp
	EffectOpenGLContextData.cpp
	ExistenceCheckThread.cpp
	ExprTk.cpp
	FileDownloader.cpp
	FileSystemModel.cpp
	FitCurve.cpp
	Format.cpp
	FrameViewRequest.cpp
	GenericSchedulerThread.cpp
	GenericSchedulerThreadWatcher.cpp
	GPUContextPool.cpp
	GroupInput.cpp
	GroupOutput.cpp
	Hash64.cpp
	HashableObject.cpp
	HistogramCPU.cpp
	ImageApplyShader.cpp
	ImageCacheEntry.cpp
	ImageCacheKey.cpp
	ImageConvert.cpp
	ImageCopyChannels.cpp
	Image.cpp
	ImageFill.cpp
	ImageMaskMix.cpp
	ImagePlaneDesc.cpp
	ImagePrivate.cpp
	ImageStorage.cpp
	ImageTilesState.cpp
	InputDescription.cpp
	Interpolation.cpp
	IPCCommon.cpp
	JoinViewsNode.cpp
	KeybindShortcut.cpp
	KeyFrameInterpolator.cpp
	KnobAnimation.cpp
	Knob.cpp
	KnobExpression.cpp
	KnobFactory.cpp
	KnobFile.cpp
	KnobItemsTable.cpp
	KnobItemsTableUndoCommand.cpp
	KnobTypes.cpp
	KnobUndoCommand.cpp
	LibraryBinary.cpp
	LoadKnobsCompat.cpp
	Log.cpp
	Lut.cpp
	Markdown.cpp
	MemoryFile.cpp
	MemoryInfo.cpp
	MultiThread.cpp
	#NatronEngine/animatedparam_wrapper.cpp
	#NatronEngine/appsettings_wrapper.cpp
	#NatronEngine/app_wrapper.cpp
	#NatronEngine/beziercurve_wrapper.cpp
	#NatronEngine/booleanparam_wrapper.cpp
	#NatronEngine/boolnodecreationproperty_wrapper.cpp
	#NatronEngine/buttonparam_wrapper.cpp
	#NatronEngine/choiceparam_wrapper.cpp
	#NatronEngine/colorparam_wrapper.cpp
	#NatronEngine/colortuple_wrapper.cpp
	#NatronEngine/double2dparam_wrapper.cpp
	#NatronEngine/double2dtuple_wrapper.cpp
	#NatronEngine/double3dparam_wrapper.cpp
	#NatronEngine/double3dtuple_wrapper.cpp
	#NatronEngine/doubleparam_wrapper.cpp
	#NatronEngine/effect_wrapper.cpp
	#NatronEngine/exprutils_wrapper.cpp
	#NatronEngine/fileparam_wrapper.cpp
	#NatronEngine/floatnodecreationproperty_wrapper.cpp
	#NatronEngine/groupparam_wrapper.cpp
	#NatronEngine/group_wrapper.cpp
	#NatronEngine/imagelayer_wrapper.cpp
	#NatronEngine/int2dparam_wrapper.cpp
	#NatronEngine/int2dtuple_wrapper.cpp
	#NatronEngine/int3dparam_wrapper.cpp
	#NatronEngine/int3dtuple_wrapper.cpp
	#NatronEngine/intnodecreationproperty_wrapper.cpp
	#NatronEngine/intparam_wrapper.cpp
	#NatronEngine/itembase_wrapper.cpp
	#NatronEngine/itemstable_wrapper.cpp
	#NatronEngine/natronengine_module_wrapper.cpp
	#NatronEngine/natron_namespace_wrapper.cpp
	#NatronEngine/nodecreationproperty_wrapper.cpp
	#NatronEngine/pageparam_wrapper.cpp
	#NatronEngine/parametricparam_wrapper.cpp
	#NatronEngine/param_wrapper.cpp
	#NatronEngine/pathparam_wrapper.cpp
	#NatronEngine/pycoreapplication_wrapper.cpp
	#NatronEngine/pycornerpinoverlayinteract_wrapper.cpp
	#NatronEngine/pyoverlayinteract_wrapper.cpp
	#NatronEngine/pyoverlayparamdesc_wrapper.cpp
	#NatronEngine/pypointoverlayinteract_wrapper.cpp
	#NatronEngine/pytransformoverlayinteract_wrapper.cpp
	#NatronEngine/rectd_wrapper.cpp
	#NatronEngine/recti_wrapper.cpp
	#NatronEngine/roto_wrapper.cpp
	#NatronEngine/separatorparam_wrapper.cpp
	#NatronEngine/stringnodecreationproperty_wrapper.cpp
	#NatronEngine/stringparambase_wrapper.cpp
	#NatronEngine/stringparam_wrapper.cpp
	#NatronEngine/strokeitem_wrapper.cpp
	#NatronEngine/strokepoint_wrapper.cpp
	#NatronEngine/tracker_wrapper.cpp
	#NatronEngine/track_wrapper.cpp
	#NatronEngine/userparamholder_wrapper.cpp
	Node.cpp
	NodeDocumentation.cpp
	NodeGroup.cpp
	NodeInputs.cpp
	NodeMain.cpp
	NodeMetadata.cpp
	NodeName.cpp
	NodeOverlay.cpp
	NodePrivate.cpp
	NodePythonInteraction.cpp
	NodeRenderPreview.cpp
	Noise.cpp
	NoOpBase.cpp
	OfxClipInstance.cpp
	OfxEffectInstance.cpp
	OfxHost.cpp
	OfxImageEffectInstance.cpp
	OfxMemory.cpp
	OfxOverlayInteract.cpp
	OfxParamInstance.cpp
	OneViewNode.cpp
	OSGLContext.cpp
	OSGLContext_mac.cpp
	OSGLContext_osmesa.cpp
	OSGLContext_win.cpp
	OSGLContext_x11.cpp
	OSGLFunctions_gl.cpp
	OSGLFunctions_mesa.cpp
	OutputSchedulerThread.cpp
	OverlayInteractBase.cpp
	Plugin.cpp
	PluginMemory.cpp
	PointOverlayInteract.cpp
	PrecompNode.cpp
	ProcessFrameThread.cpp
	ProcessHandler.cpp
	Project.cpp
	ProjectPrivate.cpp
	PropertiesHolder.cpp
	PyAppInstance.cpp
	PyExprUtils.cpp
	PyItemsTable.cpp
	PyNode.cpp
	PyNodeGroup.cpp
	PyOverlayInteract.cpp
	PyPanelI.cpp
	PyParameter.cpp
	PyRoto.cpp
	PySideCompat.cpp
	PyTracker.cpp
	QtEnumConvert.cpp
	ReadNode.cpp
	RectD.cpp
	RectI.cpp
	RemovePlaneNode.cpp
	RenderEngine.cpp
	RenderQueue.cpp
	RenderStats.cpp
	RotoBezierTriangulation.cpp
	RotoDrawableItem.cpp
	RotoItem.cpp
	RotoLayer.cpp
	RotoPaint.cpp
	RotoPaintInteract.cpp
	RotoPaintPlanarTrackerImpl.cpp
	RotoPaintPrivate.cpp
	RotoShapeRenderCairo.cpp
	RotoShapeRenderGL.cpp
	RotoShapeRenderNode.cpp
	RotoShapeRenderNodePrivate.cpp
	RotoStrokeItem.cpp
	RotoUndoCommand.cpp
	ScriptObject.cpp
	SerializableWindow.cpp
	Settings.cpp
	Smooth1D.cpp
	SplitterI.cpp
	StandardPaths.cpp
	StorageDeleterThread.cpp
	StringAnimationManager.cpp
	StubNode.cpp
	TabWidgetI.cpp
	Texture.cpp
	ThreadPool.cpp
	TimeLine.cpp
	Timer.cpp
	TLSHolder.cpp
	TrackArgs.cpp
	TrackerDetect.cpp
	TrackerFrameAccessor.cpp
	TrackerHelper.cpp
	TrackerHelperPrivate.cpp
	TrackerNode.cpp
	TrackerNodePrivate.cpp
	TrackerNodeTransformExport.cpp
	TrackMarker.cpp
	TrackScheduler.cpp
	Transform.cpp
	TransformOverlayInteract.cpp
	TreeRender.cpp
	TreeRenderQueueManager.cpp
	TreeRenderQueueProvider.cpp
	Utils.cpp
	ViewerDisplayScheduler.cpp
	ViewerInstance.cpp
	ViewerNode.cpp
	ViewerNodeKnobs.cpp
	ViewerNodeOverlays.cpp
	ViewerNodePrivate.cpp
	ViewIdx.cpp
	WriteNode.cpp
)

set(SHIBOKEN_INCLUDES
	${Python_INCLUDE_DIRS}
	$<JOIN:$<TARGET_PROPERTY:PySide2::pyside2,INTERFACE_INCLUDE_DIRECTORIES>,":">
	$<JOIN:$<TARGET_PROPERTY:Qt5::Core,INTERFACE_INCLUDE_DIRECTORIES>,":">
	$<JOIN:$<TARGET_PROPERTY:Natron::Engine,INTERFACE_INCLUDE_DIRECTORIES>,":">
	$<JOIN:$<TARGET_PROPERTY:Natron::Global,INTERFACE_INCLUDE_DIRECTORIES>,":">
)

set(SHIBOKEN_OUTPUT_DIR "${CMAKE_CURRENT_BINARY_DIR}/NatronEngine")
set(SHIBOKEN_GENERATED "${SHIBOKEN_OUTPUT_DIR}/natronengine_module_wrapper.cpp")

generate_shiboken_bindings(
	"${SHIBOKEN_GENERATED}"
	"${SHIBOKEN_INCLUDES}"
	Pyside_Engine_Python.h
	typesystem_engine.xml
)
list(APPEND SOURCES ${SHIBOKEN_GENERATED})

add_library(Engine STATIC ${SOURCES})
add_library(Natron::Engine ALIAS Engine)

target_link_libraries(Engine
	PUBLIC
		SequenceParsing
		OpenFX
		PySide2::pyside2
	PRIVATE
		OpenFX_extensions
		yaml-cpp
		libtess
		libmv
		exprtk
		qhttpserver
		ceres
		openMVG
		hoedown
		Natron::Global
		Python::Python	
		Shiboken2::libshiboken
		Qt5::Concurrent
)

get_target_property(PYSIDE2_INCLUDE_DIR PySide2::pyside2
	INTERFACE_INCLUDE_DIRECTORIES)

target_include_directories(Engine
	PUBLIC
		"${CMAKE_CURRENT_SOURCE_DIR}"
		"${CMAKE_CURRENT_SOURCE_DIR}/.."
		"${SHIBOKEN_OUTPUT_DIR}"
		"${PYSIDE2_INCLUDE_DIR}/QtCore"
)

target_compile_definitions(Engine
	PRIVATE
		SHIBOKEN_2
)

#TODO Call shiboken with Pyside_Engine_Python.h and typesystem_engine.xml
