set(SOURCES
	AboutWindow.cpp
	ActionShortcuts.cpp
	AddKnobDialog.cpp
	AnimatedCheckBox.cpp
	AnimationModuleBase.cpp
	AnimationModule.cpp
	AnimationModuleEditor.cpp
	AnimationModuleSelectionModel.cpp
	AnimationModuleTreeView.cpp
	AnimationModuleUndoRedo.cpp
	AnimationModuleView.cpp
	AnimationModuleViewCurveWidget.cpp
	AnimationModuleViewCurveWidgetPrivate.cpp
	AnimationModuleViewDopeSheet.cpp
	AnimationModuleViewPrivate.cpp
	AnimItemBase.cpp
	AutoHideToolBar.cpp
	BackdropGui.cpp
	Button.cpp
	CachedFramesThread.cpp
	ClickableLabel.cpp
	ColoredFrame.cpp
	ComboBox.cpp
	CurveGui.cpp
	CurveWidgetDialogs.cpp
	CustomParamInteract.cpp
	DialogButtonBox.cpp
	DockablePanel.cpp
	DockablePanelPrivate.cpp
	DockablePanelTabWidget.cpp
	DocumentationManager.cpp
	DotGui.cpp
	Edge.cpp
	EditExpressionDialog.cpp
	EditNodeViewerContextDialog.cpp
	EditScriptDialog.cpp
	FileTypeMainWindow_win.cpp
	FloatingWidget.cpp
	GroupBoxLabel.cpp
	Gui05.cpp
	Gui10.cpp
	Gui15.cpp
	Gui20.cpp
	Gui30.cpp
	Gui40.cpp
	Gui50.cpp
	GuiAppInstance.cpp
	GuiApplicationManager10.cpp
	GuiApplicationManager.cpp
	GuiApplicationManagerPrivate.cpp
	Gui.cpp
	GuiGLContext.cpp
	GuiPrivate.cpp
	Histogram.cpp
	InfoViewerWidget.cpp
	KnobAnim.cpp
	KnobGui10.cpp
	KnobGui20.cpp
	KnobGuiBool.cpp
	KnobGuiButton.cpp
	KnobGuiChoice.cpp
	KnobGuiColor.cpp
	KnobGuiContainerHelper.cpp
	KnobGui.cpp
	KnobGuiFactory.cpp
	KnobGuiFile.cpp
	KnobGuiGroup.cpp
	KnobGuiKeyFrameMarkers.cpp
	KnobGuiParametric.cpp
	KnobGuiPrivate.cpp
	KnobGuiSeparator.cpp
	KnobGuiString.cpp
	KnobGuiTable.cpp
	KnobGuiValue.cpp
	KnobGuiWidgets.cpp
	KnobItemsTableGui.cpp
	KnobWidgetDnD.cpp
	Label.cpp
	LineEdit.cpp
	LinkToKnobDialog.cpp
	LogWindow.cpp
	ManageUserParamsDialog.cpp
	Menu.cpp
	MessageBox.cpp
	#NatronGui/guiapp_wrapper.cpp
	#NatronGui/natrongui_module_wrapper.cpp
	#NatronGui/pyguiapplication_wrapper.cpp
	#NatronGui/pymodaldialog_wrapper.cpp
	#NatronGui/pypanel_wrapper.cpp
	#NatronGui/pytabwidget_wrapper.cpp
	NewLayerDialog.cpp
	NodeAnim.cpp
	NodeCreationDialog.cpp
	NodeGraph05.cpp
	NodeGraph10.cpp
	NodeGraph13.cpp
	NodeGraph15.cpp
	NodeGraph20.cpp
	NodeGraph25.cpp
	NodeGraph30.cpp
	NodeGraph35.cpp
	NodeGraph40.cpp
	NodeGraph45.cpp
	NodeGraph.cpp
	NodeGraphPrivate10.cpp
	NodeGraphPrivate.cpp
	NodeGraphRectItem.cpp
	NodeGraphTextItem.cpp
	NodeGraphUndoRedo.cpp
	NodeGui.cpp
	NodeGuiSerialization.cpp
	NodeSettingsPanel.cpp
	NodeViewerContext.cpp
	PanelWidget.cpp
	PickKnobDialog.cpp
	PreferencesPanel.cpp
	PreviewThread.cpp
	ProgressPanel.cpp
	ProgressTaskInfo.cpp
	ProjectGui.cpp
	PropertiesBinWrapper.cpp
	PyGlobalGui.cpp
	PyGuiApp.cpp
	PythonPanels.cpp
	QtEnumConvert.cpp
	RenderStatsDialog.cpp
	ResizableMessageBox.cpp
	RightClickableWidget.cpp
	RotoGui.cpp
	ScaleSliderQWidget.cpp
	ScriptEditor.cpp
	ScriptTextEdit.cpp
	SequenceFileDialog.cpp
	Shaders.cpp
	SpinBox.cpp
	SpinBoxValidator.cpp
	SplashScreen.cpp
	Splitter.cpp
	StyledKnobWidgetBase.cpp
	TabGroup.cpp
	TableItemAnim.cpp
	TableModelView.cpp
	TabWidget.cpp
	TextRenderer.cpp
	ticks.cpp
	TimeLineGui.cpp
	ToolButton.cpp
	UndoCommand_qt.cpp
	VerticalColorBar.cpp
	ViewerGL.cpp
	ViewerGLPrivate.cpp
	ViewerTab10.cpp
	ViewerTab40.cpp
	ViewerTab.cpp
	ViewerTabNodesUI.cpp
	ViewerTabOverlays.cpp
	ViewerTabPrivate.cpp
	ViewerToolButton.cpp
)
add_library(Gui STATIC ${SOURCES})
add_library(Natron::Gui ALIAS Gui)

target_link_libraries(Gui
	PRIVATE
		qhttpserver
		Natron::Engine
		Natron::Global
		Boost::boost
		Qt5::Core
		Qt5::Widgets
		Qt5::OpenGL
		Qt5::Concurrent
		Cairo::Cairo
		Python::Python
)
